--- a/pages/wordDocs.html
+++ b/pages/wordDocs.html
@@ -11,9 +11,12 @@
 </head>
 <body>
     <h1 align="center">Верстаю ворд! Как классно!</h1>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad aliquid beatae consequatur corporis dolorum ducimus eius et eum ex exercitationem iste laborum libero magni mollitia nesciunt perferendis praesentium, provident quae quasi quia quidem quis reiciendis rerum similique sit temporibus vero! Alias asperiores eum fugiat id quas ratione sapiente veniam.
-    </p>
+    <ul>
+        Тег p
+        <li>
+        text-indent - красная строка
+        </li>
+    </ul>
     <p>
         Lorem dolor sit amet, consectetur
         <span>
