--- a/pages/forms2.html
+++ b/pages/forms2.html
@@ -76,7 +76,26 @@
                 Я передумал
             </button>
         </div>
-
+        <div>
+            <br><br><br><br>
+            <table border="1">
+                <tr>
+                    <td>Куку</td>
+                    <td>Как дела</td>
+                    <td>Что делаешь</td>
+                </tr>
+                <tr>
+                    <td>Быстрей</td>
+                    <td>Иди</td>
+                    <td>На завод</td>
+                </tr>
+                <tr>
+                    <td>Давай</td>
+                    <td>Одевайся</td>
+                    <td>И на завод</td>
+                </tr>
+            </table>
+        </div>
     </form>
 </body>
 </html>
