--- a/pages/wordDocs.html
+++ b/pages/wordDocs.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ворд сила!</title>
-    <style>
-        p {
-            text-indent: 30px;
-        }
-    </style>
+    <link href="../css/style.css" rel="stylesheet">
 </head>
 <body>
     <h1 align="center">Верстаю ворд! Как классно!</h1>
@@ -19,18 +15,16 @@
     </ul>
     <p>
         Lorem dolor sit amet, consectetur
-        <span>
             <a href="../index.html"> ты шо, дурачек? Не нажимай! :) </a>
-        </span>
         elit. Accusamus animi cumque deleniti, dicta dolores et facere ipsam molestiae nihil obcaecati odio odit, possimus praesentium sapiente sequi vel velit veritatis voluptatem.
     </p>
-    <p>
+    <p id="p1">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea illum officiis possimus repellendus saepe sit.
     </p>
     <h3>
         Ща я тебе покажу как надо юзать тег ol
     </h3>
-    <ol>
+    <ol id="ol1">
         <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit labore quidem sit tempora veniam voluptate.</li>
         <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, et.</li>
         <li>Lorem ipsum dolor sit amet. </li>
@@ -42,7 +36,7 @@
     <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquam aspernatur blanditiis dolorem dolores ea earum ipsam iure, labore mollitia, natus nobis omnis optio quaerat ratione saepe sint soluta velit veniam voluptatum. Ad alias amet animi eius expedita officia officiis!
     </p>
-    <img src="../img/putin.jpg" alt="Всевышний" height="250" width="400">
+    <img src="../img/putin.jpg" alt="Всевышний" width="350">
     <p>
         Ля какой тут классный парень стоит!
     </p>
@@ -66,5 +60,27 @@
     <p>
         <a href="../index.html"> Пора сваливать отсюда братан </a>
     </p>
+    <table class="table-factory">
+        <tr>
+            <td>Куку</td>
+            <td>Как дела</td>
+            <td>Что делаешь</td>
+        </tr>
+        <tr>
+            <td>Быстрей</td>
+            <td>Иди</td>
+            <td>На завод</td>
+        </tr>
+        <tr>
+            <td>Давай</td>
+            <td>Одевайся</td>
+            <td>И на завод</td>
+        </tr>
+    </table>
+    <div class="line">
+        Наведи сюда МЫШКОЙ!!!!
+    </div>
+    <div class="circle">
+    </div>
 </body>
 </html>
