--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body >
     <ul>
         <li><a href="pages/wordDocs.html">Ворд</a></li>
-        <li></li>
+        <li><a href="pages/forms2.html">Формы</a></li>
         <li></li>
     </ul>
 </body>
