add html proj #1 b-sh

--- a/pages/wordDocs.html
+++ b/pages/wordDocs.html
@@ -82,5 +82,10 @@
     </div>
     <div class="circle">
     </div>
+    <div class="info">
+        <p>
+
+        </p>
+    </div>
 </body>
 </html>
