--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li><a href="pages/wordDocs.html">Ворд</a></li>
         <li><a href="pages/forms2.html">Формы</a></li>
-        <li></li>
+        <li><a href="projects/1b-sh/index.html">Первый</a></li>
     </ul>
 </body>
 </html>
