--- a/pages/forms2.html
+++ b/pages/forms2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="../css/style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Формы!!!!!</title>
 </head>
@@ -77,7 +78,14 @@
             </button>
         </div>
         <div>
-            <br><br><br><br>
+
+        </div>
+        <div>
+            <br><br>
+            <a href="../index.html">Выход</a>
+        </div>
+        <div>
+            <br><br>
             <table border="1">
                 <tr>
                     <td>Куку</td>
