--- a/projects/1b-sh/catalog.html
+++ b/projects/1b-sh/catalog.html
@@ -2,9 +2,179 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Каталог магазина "Пятерочка</title>
 </head>
 <body>
-$END$
+    <header>
+        <nav class="main-navigation">
+            <a href="#" class="main-header-logo">
+                <img src="index.html" alt="Логотип">
+            </a>
+            <ul class="site-navigation">
+                <li><a href="#">Информация</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Цены</a></li>
+                <li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+            <ul class="user-navigation">
+                <li class="login-link"><a href="#">Вход</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="container">
+
+        <h1 class="page-title">Средства для ухода</h1>
+        <ul class="breadcrumbs">
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
+            <li class="breadcrumbs-current">Рандомное слово</li>
+        </ul>
+
+        <section class="filters">
+            <h2 class="visually-hidden">Фильтр товаров</h2>
+            <!--Тут будет форма-->
+        </section>
+
+        <section class="catalog">
+            <h2 class="visually-hidden">Список товаров</h2>
+            <ul class="catalog-list">
+                <li class="catalog-item">
+                    <h3>
+                        <a href="catalog-item.html">
+                            <span class="catalog-category">Хлеб Русский натуральный</span>
+                            <span class="catalog-item-tittle">"Дарнинский"</span>
+                        </a>
+                    </h3>
+                    <p class="catalog-item-image">
+                        <a href="">
+                            <img src="#" alt="#" width="220">
+                        </a>
+                    </p>
+                    <p class="product-price">
+                        <b>60 Р</b>
+                        <a class="button" href="#">Купить</a>
+                    </p>
+                </li>
+                <li class="catalog-item">
+                    <h3>
+                        <a href="catalog-item.html">
+                            <span class="catalog-category">Хлеб американский</span>
+                            <span class="catalog-item-tittle">"Госдеповский"</span>
+                        </a>
+                    </h3>
+                    <p class="catalog-item-image">
+                        <a href="">
+                            <img src="#" alt="#" width="220">
+                        </a>
+                    </p>
+                    <p class="product-price">
+                        <b>22 Р</b>
+                        <a class="button" href="#">Купить</a>
+                    </p>
+                </li>
+                <li class="catalog-item">
+                    <h3>
+                        <a href="catalog-item.html">
+                            <span class="catalog-category">Хлеб украинский</span>
+                            <span class="catalog-item-tittle">"Госдеповский"</span>
+                        </a>
+                    </h3>
+                    <p class="catalog-item-image">
+                        <a href="">
+                            <img src="#" alt="#" width="220">
+                        </a>
+                    </p>
+                    <p class="product-price">
+                        <b>22 Р</b>
+                        <a class="button" href="#">Купить</a>
+                    </p>
+                </li>
+                <li class="catalog-item">
+                    <h3>
+                        <a href="catalog-item.html">
+                            <span class="catalog-category">Напиток спрайт</span>
+                            <span class="catalog-item-tittle">"Coca Cola"</span>
+                        </a>
+                    </h3>
+                    <p class="catalog-item-image">
+                        <a href="">
+                            <img src="#" alt="#" width="220">
+                        </a>
+                    </p>
+                    <p class="product-price">
+                        <b>22 Р</b>
+                        <a class="button" href="#">Купить</a>
+                    </p>
+                </li>
+                <li class="catalog-item">
+                    <h3>
+                        <a href="catalog-item.html">
+                            <span class="catalog-category">Напиток кола</span>
+                            <span class="catalog-item-tittle">"Coca Cola"</span>
+                        </a>
+                    </h3>
+                    <p class="catalog-item-image">
+                        <a href="">
+                            <img src="#" alt="#" width="220">
+                        </a>
+                    </p>
+                    <p class="product-price">
+                        <b>22 Р</b>
+                        <a class="button" href="#">Купить</a>
+                    </p>
+                </li>
+                <li class="catalog-item">
+                    <h3>
+                        <a href="catalog-item.html">
+                            <span class="catalog-category">Напиток фанта</span>
+                            <span class="catalog-item-tittle">"Coca cola"</span>
+                        </a>
+                    </h3>
+                    <p class="catalog-item-image">
+                        <a href="">
+                            <img src="#" alt="#" width="220">
+                        </a>
+                    </p>
+                    <p class="product-price">
+                        <b>22 Р</b>
+                        <a class="button" href="#">Купить</a>
+                    </p>
+                </li>
+            </ul>
+            <ul class="pagination-list">
+                <li class="pagination-item"><a href="#">1</a></li>
+                <li class="pagination-item pagination-item-current"><a>2</a></li>
+                <li class="pagination-item"><a href="#">3</a></li>
+                <li class="pagination-item"><a href="#">4</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <footer class="main-footer">
+        <p class="footer-contacts">
+            Магазин "Пятерочка" <br>
+            Главный офис в Северодвинске <br>
+            Адресс: Ул.Юбилейная, д. 61 <br>
+            <a href="#">Как нас найти?</a>
+        </p>
+        <div class="footer-social">
+            <b>Подписывайся!</b>
+            <ul>
+                <li><a class="social-button" href="#">Вк</a></li>
+                <li><a class="social-button" href="#">Инста</a></li>
+                <li><a class="social-button" href="#">Твиттер</a></li>
+            </ul>
+        </div>
+    </footer>
+
+    <section class="modal modal-login">
+        <h2>Личный кабинет</h2>
+        <p>Введите свой логин и пароль</p>
+        <!--Тут будет форма-->
+        <span class="modal-close">x</span>
+    </section>
+
 </body>
 </html>
