--- a/projects/1b-sh/item.html
+++ b/projects/1b-sh/item.html
@@ -2,9 +2,94 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Выбранный товар</title>
 </head>
 <body>
-$END$
+    <header>
+        <nav class="main-navigation">
+            <a href="#" class="main-header-logo">
+                <img src="index.html" alt="Логотип">
+            </a>
+            <ul class="site-navigation">
+                <li><a href="#">Информация</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Цены</a></li>
+                <li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+            <ul class="user-navigation">
+                <li class="login-link"><a href="#">Вход</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="container">
+
+        <h1 class="page-tittle">Хлеб Русский натуральный "Дарнинский"</h1>
+        <ul class="breadcrumbs">
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Магазин</a></li>
+            <li><a href="catalog.html">Средства</a></li>
+            <li class="breadcrumbs-current"><a href="#">Хлеб Русский натуральный "Дарнинский</a></li>
+        </ul>
+
+        <section class="product-photos">
+            <h2 class="visually-hidden">Изображение товара</h2>
+            <p>
+                <img src="#" alt="" width="400">
+            </p>
+            <ul class="product-photo-preview">
+                <li><img src="#" alt="#" width 140></li>
+                <li><img src="#" alt="#" width 140></li>
+                <li><img src="#" alt="#" width 140></li>
+            </ul>
+        </section>
+
+        <section class="product-info">
+            <h2 class="visually-hidden">Описание товара</h2>
+            <p class="product-availability">Есть в наличии</p>
+            <p class="product-text">Как вы знаете, самый лучший хлеб - Российский хлеб.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cumque incidunt
+                labore minus odio odit provident. Assumenda consequuntur et neque officia porro
+                repudiandae tempore tenetur! Esse exercitationem harum perspiciatis vel?
+            </p>
+            <p class="product-price">
+                <b>60 Р</b>
+                <a class="button" href="#">Купить</a>
+            </p>
+            <h3>Преимущества данного товара:</h3>
+            <ul>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad debitis eos exercitationem minus sed.</li>
+                <li>Lorem ipsum dolor sit amet..</li>
+                <li>Lorem ipsum dolor sit.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing.</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer class="main-footer">
+        <p class="footer-contacts">
+            Магазин "Пятерочка" <br>
+            Главный офис в Северодвинске <br>
+            Адресс: Ул.Юбилейная, д. 61 <br>
+            <a href="#">Как нас найти?</a>
+        </p>
+        <div class="footer-social">
+            <b>Подписывайся!</b>
+            <ul>
+                <li><a class="social-button" href="#">Вк</a></li>
+                <li><a class="social-button" href="#">Инста</a></li>
+                <li><a class="social-button" href="#">Твиттер</a></li>
+            </ul>
+        </div>
+    </footer>
+
+    <section class="modal modal-login">
+        <h2>Личный кабинет</h2>
+        <p>Введите свой логин и пароль</p>
+        <!--Тут будет форма-->
+        <span class="modal-close">x</span>
+    </section>
+
 </body>
 </html>
