changed the text of layout, added pictures

--- a/projects/1b-sh/catalog.html
+++ b/projects/1b-sh/catalog.html
@@ -8,12 +8,12 @@
     <header>
         <nav class="main-navigation">
             <a href="#" class="main-header-logo">
-                <img src="index.html" alt="Логотип">
+                <img src="img/logo.svg" alt="Логотип">
             </a>
             <ul class="site-navigation">
                 <li><a href="#">Информация</a></li>
                 <li><a href="#">Новости</a></li>
-                <li><a href="#">Цены</a></li>
+                <li><a href="#">Прайс-лист</a></li>
                 <li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
@@ -29,7 +29,7 @@
         <ul class="breadcrumbs">
             <li><a href="index.html">Главная</a></li>
             <li><a href="catalog.html">Магазин</a></li>
-            <li class="breadcrumbs-current">Рандомное слово</li>
+            <li class="breadcrumbs-current">Средства для ухода</li>
         </ul>
 
         <section class="filters">
@@ -43,8 +43,9 @@
                 <li class="catalog-item">
                     <h3>
                         <a href="catalog-item.html">
-                            <span class="catalog-category">Хлеб Русский натуральный</span>
-                            <span class="catalog-item-tittle">"Дарнинский"</span>
+                            <span class="catalog-category">Набор для путешествий
+                            </span>
+                            <span class="catalog-item-tittle">«Baxter of California»</span>
                         </a>
                     </h3>
                     <p class="catalog-item-image">
@@ -53,15 +54,15 @@
                         </a>
                     </p>
                     <p class="product-price">
-                        <b>60 Р</b>
+                        <b>2800 Р</b>
                         <a class="button" href="#">Купить</a>
                     </p>
                 </li>
                 <li class="catalog-item">
                     <h3>
                         <a href="catalog-item.html">
-                            <span class="catalog-category">Хлеб американский</span>
-                            <span class="catalog-item-tittle">"Госдеповский"</span>
+                            <span class="catalog-category">влажняющий кондиционер </span>
+                            <span class="catalog-item-tittle">«Baxter of California»</span>
                         </a>
                     </h3>
                     <p class="catalog-item-image">
@@ -70,15 +71,15 @@
                         </a>
                     </p>
                     <p class="product-price">
-                        <b>22 Р</b>
+                        <b>750 Р</b>
                         <a class="button" href="#">Купить</a>
                     </p>
                 </li>
                 <li class="catalog-item">
                     <h3>
                         <a href="catalog-item.html">
-                            <span class="catalog-category">Хлеб украинский</span>
-                            <span class="catalog-item-tittle">"Госдеповский"</span>
+                            <span class="catalog-category">Гель для волос</span>
+                            <span class="catalog-item-tittle">«SUAVECITO»</span>
                         </a>
                     </h3>
                     <p class="catalog-item-image">
@@ -87,15 +88,15 @@
                         </a>
                     </p>
                     <p class="product-price">
-                        <b>22 Р</b>
+                        <b>2800 Р</b>
                         <a class="button" href="#">Купить</a>
                     </p>
                 </li>
                 <li class="catalog-item">
                     <h3>
                         <a href="catalog-item.html">
-                            <span class="catalog-category">Напиток спрайт</span>
-                            <span class="catalog-item-tittle">"Coca Cola"</span>
+                            <span class="catalog-category">Глина для укладки волос </span>
+                            <span class="catalog-item-tittle">«American crew»</span>
                         </a>
                     </h3>
                     <p class="catalog-item-image">
@@ -104,15 +105,15 @@
                         </a>
                     </p>
                     <p class="product-price">
-                        <b>22 Р</b>
+                        <b>500 Р</b>
                         <a class="button" href="#">Купить</a>
                     </p>
                 </li>
                 <li class="catalog-item">
                     <h3>
                         <a href="catalog-item.html">
-                            <span class="catalog-category">Напиток кола</span>
-                            <span class="catalog-item-tittle">"Coca Cola"</span>
+                            <span class="catalog-category">Гель для волос</span>
+                            <span class="catalog-item-tittle">«AMERICAN CREW»</span>
                         </a>
                     </h3>
                     <p class="catalog-item-image">
@@ -121,15 +122,15 @@
                         </a>
                     </p>
                     <p class="product-price">
-                        <b>22 Р</b>
+                        <b>300 Р</b>
                         <a class="button" href="#">Купить</a>
                     </p>
                 </li>
                 <li class="catalog-item">
                     <h3>
                         <a href="catalog-item.html">
-                            <span class="catalog-category">Напиток фанта</span>
-                            <span class="catalog-item-tittle">"Coca cola"</span>
+                            <span class="catalog-category">Набор для бритья</span>
+                            <span class="catalog-item-tittle">«Baxter of California»</span>
                         </a>
                     </h3>
                     <p class="catalog-item-image">
@@ -138,7 +139,7 @@
                         </a>
                     </p>
                     <p class="product-price">
-                        <b>22 Р</b>
+                        <b>3800 Р</b>
                         <a class="button" href="#">Купить</a>
                     </p>
                 </li>
@@ -154,9 +155,9 @@
 
     <footer class="main-footer">
         <p class="footer-contacts">
-            Магазин "Пятерочка" <br>
-            Главный офис в Северодвинске <br>
-            Адресс: Ул.Юбилейная, д. 61 <br>
+            БАРБЕРШОП «БОРОДИНСКИЙ» <br>
+            АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, <br>
+            Д. 19/8 <br>
             <a href="#">Как нас найти?</a>
         </p>
         <div class="footer-social">
