--- a/projects/1b-sh/item.html
+++ b/projects/1b-sh/item.html
@@ -8,12 +8,12 @@
     <header>
         <nav class="main-navigation">
             <a href="#" class="main-header-logo">
-                <img src="index.html" alt="Логотип">
+                <img src="img/logo.svg" alt="Логотип">
             </a>
             <ul class="site-navigation">
                 <li><a href="#">Информация</a></li>
                 <li><a href="#">Новости</a></li>
-                <li><a href="#">Цены</a></li>
+                <li><a href="#">Прайс-лист</a></li>
                 <li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
@@ -25,12 +25,12 @@
 
     <main class="container">
 
-        <h1 class="page-tittle">Хлеб Русский натуральный "Дарнинский"</h1>
+        <h1 class="page-tittle">Набор для путешествий «Baxter of California»</h1>
         <ul class="breadcrumbs">
             <li><a href="#">Главная</a></li>
             <li><a href="#">Магазин</a></li>
-            <li><a href="catalog.html">Средства</a></li>
-            <li class="breadcrumbs-current"><a href="#">Хлеб Русский натуральный "Дарнинский</a></li>
+            <li><a href="catalog.html">Средства для ухода</a></li>
+            <li class="breadcrumbs-current"><a href="#">Набор для путешествий «Baxter of California»</a></li>
         </ul>
 
         <section class="product-photos">
@@ -48,16 +48,17 @@
         <section class="product-info">
             <h2 class="visually-hidden">Описание товара</h2>
             <p class="product-availability">Есть в наличии</p>
-            <p class="product-text">Как вы знаете, самый лучший хлеб - Российский хлеб.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cumque incidunt
-                labore minus odio odit provident. Assumenda consequuntur et neque officia porro
-                repudiandae tempore tenetur! Esse exercitationem harum perspiciatis vel?
+            <p class="product-text">Travel Kit – необходимый аксессуар во время любого
+                путешествия. В аккуратной кожаной сумке находится все, что нужно
+                для бритья и ухода за кожей во время рабочей поездки или отдыха:
+                средство для умывания, увлажняющий крем, крем для бритья, крем после
+                бритья, шампунь. Набор также может стать отличным подарком.
             </p>
             <p class="product-price">
-                <b>60 Р</b>
+                <b>2800 Р</b>
                 <a class="button" href="#">Купить</a>
             </p>
-            <h3>Преимущества данного товара:</h3>
+            <h3>В набор входят</h3>
             <ul>
                 <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad debitis eos exercitationem minus sed.</li>
                 <li>Lorem ipsum dolor sit amet..</li>
@@ -69,9 +70,9 @@
 
     <footer class="main-footer">
         <p class="footer-contacts">
-            Магазин "Пятерочка" <br>
-            Главный офис в Северодвинске <br>
-            Адресс: Ул.Юбилейная, д. 61 <br>
+            БАРБЕРШОП «БОРОДИНСКИЙ» <br>
+            АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, <br>
+            Д. 19/8 <br>
             <a href="#">Как нас найти?</a>
         </p>
         <div class="footer-social">
