--- a/projects/1b-sh/catalog.html
+++ b/projects/1b-sh/catalog.html
@@ -34,115 +34,144 @@
 
         <section class="filters">
             <h2 class="visually-hidden">Фильтр товаров</h2>
-            <!--Тут будет форма-->
+            <form action="#" method="get" class="filter">
+                <fieldset>
+                    <legend>Производители:</legend>
+                    <ul>
+                        <li class="filter-option">
+                            <input id="filter-baxter-of-california" type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="baxter-of-california">
+                            <label for="filter-baxter-of-california">Baxter of california</label>
+                        </li>
+                        <li class="filter-option">
+                            <input id="filter-mr-natty" type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="mr-natty">
+                            <label for="filter-mr-natty">mr natty</label></li>
+                        <li class="filter-option">
+                            <input id="filter-suavecito" type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="suavecito">
+                            <label for="filter-suavecito"></label></li>
+                        <li class="filter-option">
+                            <input id="filter-malin+goetz" type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="malin+goetz">
+                            <label for="filter-malin+goetz">malin+goetz</label></li>
+                        <li class="filter-option">
+                            <input id="filter-murray's" type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="murray's">
+                            <label for="filter-murray's"></label></li>
+                        <li class="filter-option">
+                            <input id="filter-american-crew" type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="american-crew">
+                            <label for="filter-american-crew">american crew</label></li>
+                    </ul>
+                </fieldset>
+                <fieldset>
+                    <legend>Группы товаров:</legend>
+                        <ul>
+                            <li class="filter-option">
+                                <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" id="filter-shave">
+                                <label for="filter-shave">Бритвенные принадлежности</label>
+                            </li>
+                            <li class="filter-option">
+                                <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" id="filter-care">
+                                <label for="filter-care">Средства для ухода</label>
+                            </li>
+                            <li class="filter-option">
+                                <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" id="filter-accessories">
+                                <label for="filter-accessories">Аксессуары</label>
+                            </li>
+                        </ul>
+                </fieldset>
+                <button class="filter-button button" type="submit">Показать</button>
+            </form>
         </section>
 
         <section class="catalog">
             <h2 class="visually-hidden">Список товаров</h2>
             <ul class="catalog-list">
                 <li class="catalog-item">
-                    <h3>
-                        <a href="catalog-item.html">
-                            <span class="catalog-category">Набор для путешествий
-                            </span>
+                    <a href="catalog-item.html">
+                        <h3>
+                            <span class="catalog-category">Набор для путешествий</span>
                             <span class="catalog-item-tittle">«Baxter of California»</span>
-                        </a>
-                    </h3>
-                    <p class="catalog-item-image">
-                        <a href="">
+                        </h3>
+                        <p class="catalog-item-image">
                             <img src="#" alt="#" width="220">
-                        </a>
-                    </p>
+                        </p>
+                    </a>
                     <p class="product-price">
                         <b>2800 Р</b>
                         <a class="button" href="#">Купить</a>
                     </p>
-                </li>
+
                 <li class="catalog-item">
-                    <h3>
-                        <a href="catalog-item.html">
-                            <span class="catalog-category">влажняющий кондиционер </span>
+                    <a href="catalog-item.html">
+                        <h3>
+                            <span class="catalog-category">Увлажняющий кондиционер</span>
                             <span class="catalog-item-tittle">«Baxter of California»</span>
-                        </a>
-                    </h3>
-                    <p class="catalog-item-image">
-                        <a href="">
+                        </h3>
+                        <p class="catalog-item-image">
                             <img src="#" alt="#" width="220">
-                        </a>
-                    </p>
+                        </p>
+                    </a>
                     <p class="product-price">
                         <b>750 Р</b>
                         <a class="button" href="#">Купить</a>
                     </p>
-                </li>
+
                 <li class="catalog-item">
-                    <h3>
-                        <a href="catalog-item.html">
+                    <a href="catalog-item.html">
+                        <h3>
                             <span class="catalog-category">Гель для волос</span>
                             <span class="catalog-item-tittle">«SUAVECITO»</span>
-                        </a>
-                    </h3>
-                    <p class="catalog-item-image">
-                        <a href="">
+                        </h3>
+                        <p class="catalog-item-image">
                             <img src="#" alt="#" width="220">
-                        </a>
-                    </p>
+                        </p>
+                    </a>
                     <p class="product-price">
-                        <b>2800 Р</b>
+                        <b>280 Р</b>
                         <a class="button" href="#">Купить</a>
                     </p>
-                </li>
+
                 <li class="catalog-item">
-                    <h3>
-                        <a href="catalog-item.html">
+                    <a href="catalog-item.html">
+                        <h3>
                             <span class="catalog-category">Глина для укладки волос </span>
                             <span class="catalog-item-tittle">«American crew»</span>
-                        </a>
-                    </h3>
-                    <p class="catalog-item-image">
-                        <a href="">
+                        </h3>
+                        <p class="catalog-item-image">
                             <img src="#" alt="#" width="220">
-                        </a>
-                    </p>
+                        </p>
+                    </a>
                     <p class="product-price">
                         <b>500 Р</b>
                         <a class="button" href="#">Купить</a>
                     </p>
-                </li>
+
                 <li class="catalog-item">
-                    <h3>
-                        <a href="catalog-item.html">
+                    <a href="catalog-item.html">
+                        <h3>
                             <span class="catalog-category">Гель для волос</span>
                             <span class="catalog-item-tittle">«AMERICAN CREW»</span>
-                        </a>
-                    </h3>
-                    <p class="catalog-item-image">
-                        <a href="">
+                        </h3>
+                        <p class="catalog-item-image">
                             <img src="#" alt="#" width="220">
-                        </a>
-                    </p>
+                        </p>
+                    </a>
                     <p class="product-price">
                         <b>300 Р</b>
                         <a class="button" href="#">Купить</a>
                     </p>
-                </li>
+
                 <li class="catalog-item">
-                    <h3>
-                        <a href="catalog-item.html">
+                    <a href="catalog-item.html">
+                        <h3>
                             <span class="catalog-category">Набор для бритья</span>
                             <span class="catalog-item-tittle">«Baxter of California»</span>
-                        </a>
-                    </h3>
-                    <p class="catalog-item-image">
-                        <a href="">
+                        </h3>
+                        <p class="catalog-item-image">
                             <img src="#" alt="#" width="220">
-                        </a>
-                    </p>
+                        </p>
+                    </a>
                     <p class="product-price">
                         <b>3800 Р</b>
                         <a class="button" href="#">Купить</a>
                     </p>
-                </li>
             </ul>
             <ul class="pagination-list">
                 <li class="pagination-item"><a href="#">1</a></li>
@@ -173,8 +202,26 @@
     <section class="modal modal-login">
         <h2>Личный кабинет</h2>
         <p>Введите свой логин и пароль</p>
-        <!--Тут будет форма-->
-        <span class="modal-close">x</span>
+        <form action="#" class="login-form" method="post">
+            <p>
+                <label for="user-login" class="visually-hidden">Логин</label>
+                <input id="user-login" type="text" class="login-icon-user" name="login" placeholder="Логин">
+            </p>
+            <p>
+                <label for="user-password" class="visually-hidden">Пароль</label>
+                <input id="user-password" type="password" class="login-icon-password" name="password" placeholder="Пароль">
+            </p>
+            <p class="login-password-info">
+                <label class="login-checkbox">
+                    <input name="remember" type="checkbox" class="visually-hidden">
+                    <span class="checkbox-indicator"></span>
+                    Запомнить меня
+                </label>
+                <a href="#" class="restore">Я забыл пароль!</a>
+            </p>
+            <button class="button" type="submit">Войти</button>
+        </form>
+        <button class="modal-close" type="button">Закрыть</button>
     </section>
 
 </body>
