--- a/projects/1b-sh/index.html
+++ b/projects/1b-sh/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#">Контакты</a></li>
             </ul>
             <ul class="user-navigation">
-                <li class="login-link"><a href="#">Вход</a></li>
+                <li class="login-link"><a href="login.html">Вход</a></li>
             </ul>
         </nav>
     </header>
@@ -67,8 +67,8 @@
             <div class="gallery-content">
                 <a href="#"><img src="#" alt="Фотографии" width="300"></a>
             </div>
-            <span class="button gallery-button gallery-button-back">Назад</span>
-            <span class="button gallery-button gallery-button-next">Вперед</span>
+            <button class="button gallery-button gallery-button-back">Назад</button>
+            <button class="button gallery-button gallery-button-next">Вперед</button>
         </section>
 
         <section>
@@ -89,8 +89,33 @@
 
         <section class="appointment">
             <h2>Записаться на встречу</h2>
-            <p class="appointment-info">Укажите желаемую дату и время и мы свяжемся с вами</p>
-            <!--Форма!-->
+            <p class="appointment-info">Укажите желаемую дату и время и мы свяжемся с вами
+            для подтверждения брони</p>
+            <form action="#" method="post" class="appointment-form">
+                <p class="appointment-item">
+                    <label for="appointment-date">
+                        <input id="appointment-date" type="date" name="date" value="" >
+                    </label>
+                </p>
+                <p class="appointment-item">
+                    <label for="appointment-time">
+                    <input id="appointment-time" type="text" name="time" placeholder="10:00">
+                    </label>
+                </p>
+                <p class="appointment-item">
+                    <label for="appointment-name">
+                    <input id="appointment-name" type="text" name="name" placeholder="Иван Иванович">
+                    </label>
+                </p>
+                <p class="appointment-item">
+                    <label for="appointment-phone">
+                    <input id="appointment-phone" type="tel" name="phone" placeholder="+79021926240">
+                    </label>
+                </p>
+                <button
+                        class="button" type="submit">Отправить
+                </button>
+            </form>
         </section>
     </main>
 
@@ -114,14 +139,34 @@
     <section class="modal modal-login">
         <h2>Личный кабинет</h2>
         <p>Введите свой логин и пароль</p>
-        <!--Тут будет форма-->
-        <span class="modal-close">x</span>
+        <form action="#" class="login-form" method="post">
+            <p>
+                <label for="user-login" class="visually-hidden">Логин</label>
+                <input id="user-login" type="text" class="login-icon-user" name="login" placeholder="Логин">
+            </p>
+            <p>
+                <label for="user-password" class="visually-hidden">Пароль</label>
+                <input id="user-password" type="password" class="login-icon-password" name="password" placeholder="Пароль">
+            </p>
+            <p class="login-password-info">
+                <label class="login-checkbox">
+                    <input name="remember" type="checkbox" class="visually-hidden">
+                    <span class="checkbox-indicator"></span>
+                    Запомнить меня
+                </label>
+                <a href="#" class="restore">Я забыл пароль!</a>
+            </p>
+            <button class="button" type="submit">Войти</button>
+        </form>
+        <button class="modal-close" type="button">Закрыть</button>
     </section>
 
     <section class="modal modal-map">
-        <h2>Как до нас добраться?</h2>
-        <!--Тут будет форма-->
-        <span class="modal-close">x</span>
+        <h2 class="visually-hidden">Как до нас добраться?</h2>
+        <p>
+            <img src="img/map.jpg" width="780" alt="Офис компаани находится по адресу г.Санкт-Петербугр, Ул...д5">
+        </p>
+        <button class="modal-close" type="button">Закрыть</button>
     </section>
 
 </body>
