--- a/projects/1b-sh/item.html
+++ b/projects/1b-sh/item.html
@@ -88,9 +88,28 @@
     <section class="modal modal-login">
         <h2>Личный кабинет</h2>
         <p>Введите свой логин и пароль</p>
-        <!--Тут будет форма-->
-        <span class="modal-close">x</span>
+        <form action="#" class="login-form" method="post">
+            <p>
+                <label for="user-login" class="visually-hidden">Логин</label>
+                <input id="user-login" type="text" class="login-icon-user" name="login" placeholder="Логин">
+            </p>
+            <p>
+                <label for="user-password" class="visually-hidden">Пароль</label>
+                <input id="user-password" type="password" class="login-icon-password" name="password" placeholder="Пароль">
+            </p>
+            <p class="login-password-info">
+                <label class="login-checkbox">
+                    <input name="remember" type="checkbox" class="visually-hidden">
+                    <span class="checkbox-indicator"></span>
+                    Запомнить меня
+                </label>
+                <a href="#" class="restore">Я забыл пароль!</a>
+            </p>
+            <button class="button" type="submit">Войти</button>
+        </form>
+        <button class="modal-close" type="button">Закрыть</button>
     </section>
+
 
 </body>
 </html>
