--- a/projects/1b-sh/catalog.html
+++ b/projects/1b-sh/catalog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Каталог магазина "Пятерочка</title>
+    <title>Каталог барбершопа "Бородинский"</title>
 </head>
 <body>
     <header>
