--- a/projects/1b-sh/index.html
+++ b/projects/1b-sh/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Магазин "Пятерочка"</title>
+    <title>Барбершоп "Бородинский"</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -26,7 +27,7 @@
     </header>
 
     <main class="container">
-        <h1 class="visually-hidden">Магазин "Пятерочка"</h1>
+        <h1 class="visually-hidden">Барбершоп "Бородинский"</h1>
         <section class="features">
             <h2 class="visually-hidden">Преимущества</h2>
             <ul class="features-list">
@@ -37,8 +38,8 @@
                 </li>
                 <li class="features-item">
                     <h3>Круто</h3>
-                    <p>У нас самые низкие цены среди всех магазинов. Достигнуто это было
-                    путем дипломатии с поставщиками, которые продают нам товар за бесценок!</p>
+                    <p>Забудьте, как вы стриглись раньше. Мы сделаем из вас здвезду футбола или кино
+                    ! Во всяком случае внешне.</p>
                 </li>
                 <li class="features-item">
                     <h3>Дорого</h3>
