--- a/projects/1b-sh/item.html
+++ b/projects/1b-sh/item.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Выбранный товар</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
