css layout without flex/grid

--- a/projects/1b-sh/catalog.html
+++ b/projects/1b-sh/catalog.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Каталог барбершопа "Бородинский"</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="inner-page">
     <header>
         <nav class="main-navigation">
             <a href="#" class="main-header-logo">
-                <img src="img/logo.svg" alt="Логотип">
+                <img src="img/header-logo.svg" alt="Логотип">
             </a>
             <ul class="site-navigation">
                 <li><a href="#">Информация</a></li>
@@ -47,13 +50,13 @@
                             <label for="filter-mr-natty">mr natty</label></li>
                         <li class="filter-option">
                             <input id="filter-suavecito" type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="suavecito">
-                            <label for="filter-suavecito"></label></li>
+                            <label for="filter-suavecito">suavecito</label></li>
                         <li class="filter-option">
                             <input id="filter-malin+goetz" type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="malin+goetz">
                             <label for="filter-malin+goetz">malin+goetz</label></li>
                         <li class="filter-option">
-                            <input id="filter-murray's" type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="murray's">
-                            <label for="filter-murray's"></label></li>
+                            <input disabled id="filter-murray's" type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="murray's">
+                            <label for="filter-murray's">murray's</label></li>
                         <li class="filter-option">
                             <input id="filter-american-crew" type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="american-crew">
                             <label for="filter-american-crew">american crew</label></li>
@@ -90,7 +93,7 @@
                             <span class="catalog-item-tittle">«Baxter of California»</span>
                         </h3>
                         <p class="catalog-item-image">
-                            <img src="#" alt="#" width="220">
+                            <img src="img/item1.jpg" alt="#" width="220">
                         </p>
                     </a>
                     <p class="product-price">
@@ -105,7 +108,7 @@
                             <span class="catalog-item-tittle">«Baxter of California»</span>
                         </h3>
                         <p class="catalog-item-image">
-                            <img src="#" alt="#" width="220">
+                            <img src="img/tovar2.jpg" alt="#" width="220">
                         </p>
                     </a>
                     <p class="product-price">
@@ -120,7 +123,7 @@
                             <span class="catalog-item-tittle">«SUAVECITO»</span>
                         </h3>
                         <p class="catalog-item-image">
-                            <img src="#" alt="#" width="220">
+                            <img src="img/tovar3.jpg" alt="#" width="220">
                         </p>
                     </a>
                     <p class="product-price">
@@ -135,7 +138,7 @@
                             <span class="catalog-item-tittle">«American crew»</span>
                         </h3>
                         <p class="catalog-item-image">
-                            <img src="#" alt="#" width="220">
+                            <img src="img/tovar4.jpg" alt="#" width="220">
                         </p>
                     </a>
                     <p class="product-price">
@@ -150,7 +153,7 @@
                             <span class="catalog-item-tittle">«AMERICAN CREW»</span>
                         </h3>
                         <p class="catalog-item-image">
-                            <img src="#" alt="#" width="220">
+                            <img src="img/tovar5.jpg" alt="#" width="220">
                         </p>
                     </a>
                     <p class="product-price">
@@ -165,7 +168,7 @@
                             <span class="catalog-item-tittle">«Baxter of California»</span>
                         </h3>
                         <p class="catalog-item-image">
-                            <img src="#" alt="#" width="220">
+                            <img src="img/tovar6.jpg" alt="#" width="220">
                         </p>
                     </a>
                     <p class="product-price">
