--- a/projects/1b-sh/item.html
+++ b/projects/1b-sh/item.html
@@ -7,11 +7,11 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="inner-page">
     <header>
         <nav class="main-navigation">
             <a href="#" class="main-header-logo">
-                <img src="img/logo.svg" alt="Логотип">
+                <img src="img/header-logo.svg" alt="Логотип">
             </a>
             <ul class="site-navigation">
                 <li><a href="#">Информация</a></li>
@@ -38,13 +38,13 @@
 
         <section class="product-photos">
             <h2 class="visually-hidden">Изображение товара</h2>
-            <p>
-                <img src="#" alt="" width="400">
+            <p class="product-photo-full">
+                <img src="img/item1.jpg" alt="" width="400">
             </p>
             <ul class="product-photo-preview">
-                <li><img src="#" alt="#" width 140></li>
-                <li><img src="#" alt="#" width 140></li>
-                <li><img src="#" alt="#" width 140></li>
+                <li><img src="img/item2.jpg" alt="#" width 140></li>
+                <li><img src="img/item3.jpg" alt="#" width 140></li>
+                <li><img src="img/item4.jpg" alt="#" width 140></li>
             </ul>
         </section>
 
@@ -61,7 +61,7 @@
                 <b>2800 Р</b>
                 <a class="button" href="#">Купить</a>
             </p>
-            <h3>В набор входят</h3>
+            <h3>В набор входят:</h3>
             <ul>
                 <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad debitis eos exercitationem minus sed.</li>
                 <li>Lorem ipsum dolor sit amet..</li>
