--- a/projects/1b-sh/index.html
+++ b/projects/1b-sh/index.html
@@ -8,21 +8,26 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="main-header">
         <nav class="main-navigation">
             <a href="#" class="main-header-logo">
-                <img src="img/header-logo.svg" alt="Логотип">
+                <img src="img/index-logo.svg" alt="Логотип">
             </a>
-            <ul class="site-navigation">
-                <li><a href="#">Информация</a></li>
-                <li><a href="#">Новости</a></li>
-                <li><a href="#">Прайс-лист</a></li>
-                <li><a href="catalog.html">Магазин</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-            <ul class="user-navigation">
-                <li class="login-link"><a href="login.html">Вход</a></li>
-            </ul>
+            <div class="main-navigation-wrapper">
+                <div class="container">
+                    <ul class="site-navigation">
+                        <li><a href="#"><img src="img/header-logo.svg" alt=""></a></li>
+                        <li><a href="#">Информация</a></li>
+                        <li><a href="#">Новости</a></li>
+                        <li><a href="#">Прайс-лист</a></li>
+                        <li><a href="catalog.html">Магазин</a></li>
+                        <li><a href="#">Контакты</a></li>
+                    </ul>
+                    <ul class="user-navigation">
+                        <li class="login-link"><a href="login.html">Вход</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -44,8 +49,7 @@
                 <li class="features-item">
                     <h3>Дорого</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias deserunt ea,
-                        explicabo impedit incidunt iste iusto minima modi molestiae non odit provident
-                        quaerat qui quia quibusdam quis quod sed! Accusamus debitis</p>
+                        explicabo impedit incidunt </p>
                 </li>
             </ul>
         </section>
@@ -127,19 +131,21 @@
     </div>
 
     <footer class="main-footer">
-        <p class="footer-contacts">
-            БАРБЕРШОП «БОРОДИНСКИЙ» <br>
-            АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, <br>
-            Д. 19/8 <br>
-            <a href="#">Как нас найти?</a>
-        </p>
-        <div class="footer-social">
-            <b>Подписывайся!</b>
-            <ul>
-                <li><a class="social-button" href="#">Вк</a></li>
-                <li><a class="social-button" href="#">Инста</a></li>
-                <li><a class="social-button" href="#">Твиттер</a></li>
-            </ul>
+        <div class="container">
+            <p class="footer-contacts">
+                БАРБЕРШОП «БОРОДИНСКИЙ» <br>
+                АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, <br>
+                Д. 19/8 <br>
+                <a href="#">Как нас найти?</a>
+            </p>
+            <div class="footer-social">
+                <b>Подписывайся!</b>
+                <ul>
+                    <li><a class="social-button" href="#">Вк</a></li>
+                    <li><a class="social-button" href="#">Инста</a></li>
+                    <li><a class="social-button" href="#">Твиттер</a></li>
+                </ul>
+            </div>
         </div>
     </footer>
 
